# claudino-gpt-v2

./: .gitignore  pyproject.toml
notebooks/: colab.py  raw_feature_engineering.py  train_model.py  train_tokenizer.py
src/claudino_gpt/: main.py  utils.py
src/claudino_gpt/feature_engineering/: __init__.py  tokenization.py
src/claudino_gpt/metrics/: perplexity.py
src/claudino_gpt/models/: claudino_gpt.py  tokenizer.py  tokenizer_constants.py
src/claudino_gpt/persistence/: model_data.py  preprocessing.py
